# neovim

./: Makefile  index.html
src/: CMakeLists.txt  globals.h  if_cscope.c  io.c  io.h  main.c  misc2.c  os_unix.c  state.c  term.c  types.h  ui.c  util.h  vim.h
src/proto/: os_unix.pro  ui.pro
src/testdir/: test49.vim
